--- a/appsettings.json
+++ b/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5432;Database=NodoDB;Username=usuarionodo;Password=1234"
-  }
+  },
+  "Jwt": {
+ "Key": "37301188386789253435490698376144",
+ "Issuer": "BackendProject",
+ "Audience": "BackendProjectUser"
+ }
 }
